...
import Player from "features/game/player";
import { find, orderBy } from "lodash";
import { useContext, useState } from "react";
import { FlatList, StyleSheet, TouchableOpacity, View } from "react-native";
import { Card, Icon, Overlay } from "react-native-elements";

const Teams = ({ teams, scoring, currentHole }) => {
  const { game, activeGameSpec } = useContext(GameContext);
  const { players } = game;
  const ordered_teams = orderBy(teams, ["team"], ["asc"]);

  const [visible, setVisible] = useState(false);

...
