...
      <Tabs.Screen
        name="Games"
        component={GamesNavigator}
        options={{
          title: "Games",
          headerShown: false,
          tabBarButtonTestID: "tab-games",
          tabBarIcon: ({ color }) => (
            <Ionicons size={28} name="golf" color={color} />
          ),
        }}
      />
      <Tabs.Screen
        name="Profile"
        component={ProfileNavigator}
        options={{
          title: "Profile",
          headerShown: false,
          tabBarButtonTestID: "tab-profile",
          tabBarIcon: ({ color }) => (
            <View>
              <FontAwesome6
                size={28}
                name="user"
                color={color}
...
