...
            title="Account"
            showWarning={showAccountWarning}
            onPress={() => navigation.navigate("AccountScreen")}
          />
          {showDevTools && (
            <ProfileRow
              testID="developer-tools-row"
              title="Developer Tools"
              onPress={() => navigation.navigate("DeveloperToolsScreen")}
            />
          )}
        </View>

...
